; ModuleID = '/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_acquire_invocation_id.c'
source_filename = "/home/carl/AnghaBench/systemd/src/core/extr_unit.c_unit_acquire_invocation_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [46 x i8] c"Failed to generate invocation ID for unit: %m\00", align 1
@.str.1 = private unnamed_addr constant [41 x i8] c"Failed to set invocation ID for unit: %m\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @unit_acquire_invocation_id(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @assert(i32* %6)
  %8 = call i32 @sd_id128_randomize(i32* %4)
  store i32 %8, i32* %5, align 4
  %9 = load i32, i32* %5, align 4
  %10 = icmp slt i32 %9, 0
  br i1 %10, label %11, label %15

11:                                               ; preds = %1
  %12 = load i32*, i32** %3, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @log_unit_error_errno(i32* %12, i32 %13, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  store i32 %14, i32* %2, align 4
  br label %28

15:                                               ; preds = %1
  %16 = load i32*, i32** %3, align 8
  %17 = load i32, i32* %4, align 4
  %18 = call i32 @unit_set_invocation_id(i32* %16, i32 %17)
  store i32 %18, i32* %5, align 4
  %19 = load i32, i32* %5, align 4
  %20 = icmp slt i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %15
  %22 = load i32*, i32** %3, align 8
  %23 = load i32, i32* %5, align 4
  %24 = call i32 @log_unit_error_errno(i32* %22, i32 %23, i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.1, i64 0, i64 0))
  store i32 %24, i32* %2, align 4
  br label %28

25:                                               ; preds = %15
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @unit_add_to_dbus_queue(i32* %26)
  store i32 0, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %21, %11
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @sd_id128_randomize(i32*) #1

declare dso_local i32 @log_unit_error_errno(i32*, i32, i8*) #1

declare dso_local i32 @unit_set_invocation_id(i32*, i32) #1

declare dso_local i32 @unit_add_to_dbus_queue(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
